fixed overflow for testimonial

--- a/src/layouts/testimonial/testimonial.scss
+++ b/src/layouts/testimonial/testimonial.scss
@@ -3,6 +3,7 @@
 .testimonial {
   overflow: hidden;
   margin-bottom: 50px;
+  padding-bottom: 15px;
 
   .testimonial__cards {
     display: flex;
